# scrapy-sql

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml  pytest.ini  quotes_playground.db  test.db
scrapy_sql/: __init__.py  _defaults.py  adapters.py  bulk_session.py  connections.py  declarative_base.py  exporters.py  faux_session.py  feedexport.py  instanceadapter.py  loader.py  playground.py  scrapy_session.py  session.py  sessions.py  simple_playground.py  stmts.py  subquery_item.py  tableadapter.py  tempCodeRunnerFile.py  utils.py
scrapy_sql/_collections/: relationship_queries.py  relationships.py  table_list.py
scrapy_sql/commands/: cmdline.py
scrapy_sql/containers/: __init__.py  relationships.py
scrapy_sql/sessions/: bulk.py  unit_of_work.py
tests/: _test_feedexport_helpers.py  conftest.py  conftest_II.py  memory:  playground.py  playground_II.py  tempCodeRunnerFile.py  test_adapters.py  test_exporters.py  test_feedexport.py  test_instanceadapter.py  test_integration.py  test_loader.py  test_session.py  test_subquery_item.py  test_tableadapter.py  test_under_defaults.py  test_utils.py
tests/_collections/: test_table_list.py
tests/conftest/: __init__.py  instance_kwargs.py  models.py  transient.py
tests/data/: models.py  rows.py
tests/integration_test/: quotes.db  quotes_debug.db  test_integration.py
tests/integration_test/quote_website/: page_1.html
tests/integration_test/quote_website/authors/: albert_einstein.html  jkf.html
tests/integration_test/quotes/: itemloaders.py  models.py  processors.py  settings.py  tables.py
tests/integration_test/quotes/events/: attribute_events.py  instance_events.py  instrumentation_events.py  mapper_events.py  query_events.py  session_events.py
tests/integration_test/quotes/items/: itemloaders.py  models.py  processors.py  (+1 more)
tests/integration_test_project/: quotes.db  test_integration.py
tests/integration_test_project/quote_website/: index.html
tests/integration_test_project/quotes/: settings.py
tests/integration_tests/quote_website/: page_2.html
tests/project_settings/: settings.py
(+5 files in other folders)
